The libraries should go at the end of the compile command

--- a/process/wgOptimize/GNUmakefile
+++ b/process/wgOptimize/GNUmakefile
@@ -18,14 +18,17 @@ ROOTGLIBS = $(shell root-config --glibs)
 CXXFLAGS   = -g -MMD -MP -Wall -fPIC 
 CXXFLAGS   += $(INCLUDE) $(ROOTCFLAGS)
 CXXLIBS    = -lSpectrum
-CXXLIBS    += $(INCLUDE) $(ROOTLIBS)
-DEPENDS = $(OBJS:.o=.d)
+CXXLIBS    += $(ROOTLIBS) $(ROOTGLIBS)
+DEPENDS    = $(OBJS:.o=.d)
 CC = g++
 
 all: $(BINDIR)/$(TARGET)
 
 $(BINDIR)/$(TARGET): $(OBJS)
-	$(CC) $(CXXLIBS) -o $@ $^
+	@if [ ! -d $(BINDIR) ]; \
+		then echo "mkdir -p $(BINDIR)"; mkdir -p $(BINDIR); \
+		fi
+	$(CC) -o $@ $^ $(CXXLIBS)
 
 $(OBJDIR)/%.o:$(SRCDIR)/%.cc
 	@if [ ! -d $(OBJDIR) ]; \
