--- a/process/wgAnaHist/GNUmakefile
+++ b/process/wgAnaHist/GNUmakefile
@@ -1,6 +1,9 @@
 TARGET = wgAnaHist
 
-INCDIR = -I ../../include
+TARGET_LIB = lib$(TARGET)
+
+CURRENT_DIR := $(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
+INCDIR = ../../include
 OBJDIR = ../../obj
 SRCDIR = ../../src
 BINDIR = ../../bin
@@ -8,36 +11,49 @@ BINDIR = ../../bin
 SRCS = $(shell ls $(SRCDIR)/*.cc)
 OBJS = $(subst $(SRCDIR),$(OBJDIR),$(SRCS:.cc=.o))	
 
-SRCS += $(TARGET).cc
-OBJS += $(TARGET).o
+LIB_SRC    = $(TARGET_LIB).cc
+LIB_OBJ    = $(TARGET_LIB).o
+HEADER     = $(INCDIR)/$(TARGET).hpp
+TARGET_SRC = $(TARGET).cc
+TARGET_OBJ = $(TARGET).o 
 
-ROOTCFLAGS = $(shell root-config --cflags)
-ROOTLIBS   = $(shell root-config --libs)
-ROOTGLIBS = $(shell root-config --glibs)
+ROOTCFLAGS := $(shell root-config --cflags)
+ROOTLIBS   := $(shell root-config --libs)
 
 CXXFLAGS   = -g -O0 -MMD -MP -Wall -fPIC
-CXXFLAGS   += $(INCDIR) $(ROOTCFLAGS)
-CXXLIBS    = -lSpectrum
-CXXLIBS    += $(ROOTLIBS) $(ROOTGLIBS)
+CXXFLAGS   += -I$(INCDIR) $(ROOTCFLAGS)
+CXXLIBS    = -L$(BINDIR) -lSpectrum -lboost_system -lboost_filesystem
+CXXLIBS    += $(ROOTLIBS)
 DEPENDS    = $(OBJS:.o=.d)
 CC = g++
+AR = ar
 
-all: $(BINDIR)/$(TARGET)
+all: $(BINDIR)/$(TARGET_LIB) $(BINDIR)/$(TARGET)
 
-$(BINDIR)/$(TARGET): $(OBJS)
+$(BINDIR)/$(TARGET): $(OBJS) $(TARGET_OBJ)
 	@if [ ! -d $(BINDIR) ]; \
 		then echo "mkdir -p $(BINDIR)"; mkdir -p $(BINDIR); \
-		fi
-	$(CC) -o $@ $^ $(CXXLIBS)
+	fi
+	$(CC) -o $@ $^ -Wl,-rpath,$(CURRENT_DIR)/$(BINDIR) $(CXXLIBS) -l$(TARGET)
+
+$(BINDIR)/$(TARGET_LIB): $(OBJS) $(LIB_OBJ)
+	$(CC) -shared -Wl,-soname,$(TARGET_LIB).so -o $@.so $^ $(CXXLIBS)
+	$(AR) rcs $(BINDIR)/$(TARGET_LIB).a $(OBJS) $(LIB_OBJ)
+
+$(LIB_OBJ): $(LIB_SRC) $(HEADER)
+	$(CC) $(CXXFLAGS) -o $@ -c $<
+
+$(TARGET_OBJ): $(TARGET_SRC) $(HEADER)
+	$(CC) $(CXXFLAGS) -o $@ -c $<
 
 $(OBJDIR)/%.o:$(SRCDIR)/%.cc
 	@if [ ! -d $(OBJDIR) ]; \
 		then echo "mkdir -p $(OBJDIR)"; mkdir -p $(OBJDIR); \
-		fi
-	$(CC) $(CXXFLAGS) $(INCDIR) -o $@ -c $<
+	fi
+	$(CC) $(CXXFLAGS) -o $@ -c $<
 
 clean:
-	$(RM) -f $(BINDIR)/$(TARGET) $(OBJS) $(DEPENDS) AutoDict*
+	$(RM) -f $(BINDIR)/$(TARGET) $(BINDIR)/$(TARGET_LIB)* $(OBJS) $(DEPENDS) *.o
 
 -include $(DEPENDS)
 
