Modified the wgScurve program

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -7,4 +7,4 @@ add_subdirectory(wgChangeConfig)
 # add_subdirectory(wgPreCalib)
 add_subdirectory(wgAnaPedestal)
 add_subdirectory(wgAnaPedestalSummary)
-# add_subdirectory(wgScurve)
+add_subdirectory(wgScurve)
