--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -3,7 +3,8 @@ add_subdirectory(wgMakeHist)
 add_subdirectory(wgAnaHist)
 add_subdirectory(wgAnaHistSummary)
 add_subdirectory(wgChangeConfig)
-add_subdirectory(wgOptimize)
-add_subdirectory(wgPreCalib)
+# add_subdirectory(wgOptimize)
+# add_subdirectory(wgPreCalib)
 add_subdirectory(wgAnaPedestal)
 add_subdirectory(wgAnaPedestalSummary)
+# add_subdirectory(wgScurve)
