Modified the wgScurveSummary program

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(wgChangeConfig)
 add_subdirectory(wgAnaPedestal)
 add_subdirectory(wgAnaPedestalSummary)
 # add_subdirectory(wgScurve)
+# add_subdirectory(wgScurveSummary)
