Now the wgOptimize program can be compiled again

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -3,7 +3,7 @@ add_subdirectory(wgMakeHist)
 add_subdirectory(wgAnaHist)
 add_subdirectory(wgAnaHistSummary)
 # add_subdirectory(wgChangeConfig)
-# add_subdirectory(wgOptimize)
+add_subdirectory(wgOptimize)
 # add_subdirectory(wgPreCalib)
 add_subdirectory(wgAnaPedestalSummary)
 # add_subdirectory(wgScurve)
