--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -2,9 +2,9 @@ add_subdirectory(wgDecoder)
 add_subdirectory(wgMakeHist)
 add_subdirectory(wgAnaHist)
 add_subdirectory(wgAnaHistSummary)
+add_subdirectory(wgAnaPedestal)
 # add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
 # add_subdirectory(wgPreCalib)
-add_subdirectory(wgAnaPedestalSummary)
 # add_subdirectory(wgScurve)
 # add_subdirectory(wgScurveSummary)
