Checked the first half of the wgScurve program

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -6,5 +6,4 @@ add_subdirectory(wgAnaPedestal)
 # add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
 # add_subdirectory(wgPreCalib)
-# add_subdirectory(wgScurve)
-# add_subdirectory(wgScurveSummary)
+add_subdirectory(wgScurve)
