Improved Cmake CMAKE_BUILD_TYPE handling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,17 +15,24 @@ endif()
 # Set C++11 standard
 set (CMAKE_CXX_STANDARD 11)
 
-# Enable debug symbols
-set(CMAKE_BUILD_TYPE Debug)
-
 # Be verbose
 #set(CMAKE_VERBOSE_MAKEFILE ON)
 
-# Add -O0 to remove optimizations when using gcc
-IF(CMAKE_COMPILER_IS_GNUCC)
+# Build types :
+
+# RelWithDebInfo [-O2 –g] (default)
+# Debug [-g -O0 -ggdb]
+# Release [-O3]
+
+if ( NOT CMAKE_BUILD_TYPE )
+   set( CMAKE_BUILD_TYPE Release ... FORCE )
+endif ()
+
+# Add -O0 to remove optimizations when using gcc and debugging
+if ( CMAKE_COMPILER_IS_GNUCC )
   set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -ggdb")
   set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -ggdb")
-ENDIF(CMAKE_COMPILER_IS_GNUCC)
+endif ( CMAKE_COMPILER_IS_GNUCC )
 
 # boost system and filesystem are required
 find_package(Boost COMPONENTS system filesystem REQUIRED)
@@ -38,7 +45,7 @@ execute_process (
   OUTPUT_VARIABLE ROOT_HAS_MINUIT2
   )
 string(STRIP ${ROOT_HAS_MINUIT2} ROOT_HAS_MINUIT2)
-if (ROOT_HAS_MINUIT2 EQUAL "0")
+if ( ROOT_HAS_MINUIT2 EQUAL "0" )
   add_definitions(-DROOT_HAS_NOT_MINUIT2)
   message(AUTHOR_WARNING "ROOT has no support for Minuit2 minimizer")
 else ()
@@ -50,7 +57,7 @@ if ( APPLE )
   set(nlohmann_json_DIR "/opt/local/lib/cmake/nlohmann_json")
 else ()
   set(nlohmann_json_DIR "/usr/lib/cmake")
-endif()
+endif ()
 find_package(nlohmann_json REQUIRED)
 
 # build libwagasci.a
