Changed AnaPedestal name to PedestalCalib

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -2,7 +2,7 @@ add_subdirectory(wgDecoder)
 add_subdirectory(wgMakeHist)
 add_subdirectory(wgAnaHist)
 add_subdirectory(wgAnaHistSummary)
-add_subdirectory(wgAnaPedestal)
+add_subdirectory(wgPedestalCalib)
 add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
 # add_subdirectory(wgPreCalib)
