--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -5,5 +5,5 @@ add_subdirectory(wgAnaHistSummary)
 add_subdirectory(wgPedestalCalib)
 add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
-# add_subdirectory(wgPreCalib)
+add_subdirectory(wgGainCalib)
 add_subdirectory(wgScurve)
