Started to work on the new wgOnlineMonitor

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -7,3 +7,4 @@ add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
 add_subdirectory(wgGainCalib)
 add_subdirectory(wgScurve)
+add_subdirectory(wgOnlineMonitor)
