--- a/process/wgDecoder/CMakeLists.txt
+++ b/process/wgDecoder/CMakeLists.txt
@@ -24,10 +24,10 @@ set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 ################ includes ################
 
 # WAGASCI include directory
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../include)
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../include")
 
 # ROOT include directory
-include_directories(${ROOT_INCLUDE_DIRS})
+include_directories("${ROOT_INCLUDE_DIRS}")
 
 #####################################################################
 #                                                                   #
@@ -36,7 +36,8 @@ include_directories(${ROOT_INCLUDE_DIRS})
 #####################################################################
 
 # Compile them as a static library .a
-add_library(lib${process} SHARED lib${process}.cpp lib${process}Seeker.cpp lib${process}Reader.cpp lib${process}Utils.cpp )
+add_library(lib${process} SHARED lib${process}.cpp lib${process}Seeker.cpp
+  lib${process}Reader.cpp lib${process}Utils.cpp )
 set_target_properties(lib${process} PROPERTIES OUTPUT_NAME "${process}")
 
 # Link with ...
@@ -48,16 +49,18 @@ target_link_libraries(lib${process}
  )
 
 # make the library discoverable from all the programs
-target_include_directories(lib${process} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(lib${process} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 # install the static library in the lib folder
-install(TARGETS lib${process} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/../../lib)
+install(TARGETS lib${process} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
 
 #####################################################################
 #                                                                   #
 #                          Executables                              #
 #                                                                   #
 #####################################################################
+
+##### wgDecoder
 
 add_executable(${process} ${process}.cpp)
 
@@ -66,6 +69,8 @@ target_link_libraries(${process} lib${process})
 
 # install the executable in the bin folder
 install(TARGETS ${process} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
+
+##### wgRawEmulator
 
 add_executable(${raw_emulator} ${raw_emulator}.cpp)
 
