--- a/process/wgDecoder/CMakeLists.txt
+++ b/process/wgDecoder/CMakeLists.txt
@@ -35,6 +35,8 @@ include_directories("${ROOT_INCLUDE_DIRS}")
 #                                                                   #
 #####################################################################
 
+##### wgDecoder
+
 # Compile them as a static library .a
 add_library(lib${process} SHARED lib${process}.cpp lib${process}Seeker.cpp
   lib${process}Reader.cpp lib${process}Utils.cpp )
@@ -52,7 +54,19 @@ target_link_libraries(lib${process}
 target_include_directories(lib${process} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
 
 # install the static library in the lib folder
-install(TARGETS lib${process} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
+install(TARGETS lib${process} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+
+##### wgRawEmulator
+
+add_library(lib${raw_emulator} SHARED lib${raw_emulator}.cpp)
+set_target_properties(lib${raw_emulator} PROPERTIES OUTPUT_NAME "${raw_emulator}")
+
+# make the library discoverable from all the programs
+target_include_directories(lib${raw_emulator} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+
+# install the static library in the lib folder
+install(TARGETS lib${raw_emulator} DESTINATION "${CMAKE_INSTALL_PREFIX}/lib")
+
 
 #####################################################################
 #                                                                   #
@@ -75,7 +89,11 @@ install(TARGETS ${process} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
 add_executable(${raw_emulator} ${raw_emulator}.cpp)
 
 # Link with ...
-target_link_libraries(${raw_emulator} lib${process})
+target_link_libraries(${raw_emulator} lib${process} lib${raw_emulator})
 
 # install the executable in the bin folder
 install(TARGETS ${raw_emulator} DESTINATION "${CMAKE_INSTALL_PREFIX}/bin")
+
+##### Unit tests
+
+add_subdirectory(unit_tests)
