--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -6,5 +6,6 @@ add_subdirectory(wgPedestalCalib)
 add_subdirectory(wgChangeConfig)
 add_subdirectory(wgOptimize)
 add_subdirectory(wgGainCalib)
+add_subdirectory(wgGainCalibUgly)
 add_subdirectory(wgScurve)
 add_subdirectory(wgOnlineMonitor)
