Moved wgRawEmulator to its own folder

--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(wgDecoder)
+#add_subdirectory(wgRawEmulator)
 add_subdirectory(wgMakeHist)
 add_subdirectory(wgAnaHist)
 add_subdirectory(wgAnaHistSummary)
