--- a/process/wgDecoder/unit_tests/CMakeLists.txt
+++ b/process/wgDecoder/unit_tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(decoder wgDecoder)
+set(raw_emulator wgRawEmulator)
 set(test1 test_decoder_utils)
 
 ################ Compiler flags ################
@@ -38,7 +40,7 @@ include_directories("${ROOT_INCLUDE_DIRS}")
 add_executable(${test1} ${test1}.cpp)
 
 # Link with ...
-target_link_libraries(${test1} libwgDecoder libwgRawEmulator)
+target_link_libraries(${test1} lib${decoder} lib${raw_emulator})
 
 # install the executable in the unit_tests folder
 install(TARGETS ${test1} DESTINATION "${CMAKE_INSTALL_PREFIX}/unit_tests")
