--- a/process/CMakeLists.txt
+++ b/process/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory(wgOptimize)
 add_subdirectory(wgGainCalib)
 add_subdirectory(wgScurve)
 add_subdirectory(wgOnlineMonitor)
+add_subdirectory(wgDQCheck)
